# ai-contained-template

./: .dockerignore  Dockerfile  README.md  TEMPLATE.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  server.py
