[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-contained-template"
version = "0.0.2"
description = "Example MCP server using the helloworld plugin"
requires-python = ">=3.12"
dependencies = [
    "ai-contained-core-mcp @ https://github.com/AI-Contained/core-mcp/archive/refs/tags/v0.0.2.zip",
    "ai-contained-provider-template @ https://github.com/AI-Contained/ai-contained-provider-template/archive/refs/tags/v0.0.2.zip",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
